--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "socker.io",
-  "version": "0.0.0-alpha-beta-omega",
+  "version": "0.0.0-alpha-beta",
   "description": "You typoed.",
   "main": "README.md",
   "scripts": {
